[gd_scene load_steps=3 format=3 uid="uid://ppkxf0iumipy"]

[ext_resource type="Script" path="res://rooms/room_data_filler.gd" id="1_qehsr"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_tnyog"]
bg_color = Color(0.121569, 0.121569, 0.121569, 1)

[node name="RoomDataFiller" type="MarginContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 8
script = ExtResource("1_qehsr")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2
theme_override_constants/separation = 8

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="StartButton" type="Button" parent="VBoxContainer/MarginContainer"]
layout_mode = 2
text = "Start Generating"

[node name="Close" type="Button" parent="VBoxContainer/MarginContainer"]
visible = false
layout_mode = 2
text = "Close"

[node name="ScrollContainer" type="ScrollContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="MessageLog" type="Label" parent="VBoxContainer/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_styles/normal = SubResource("StyleBoxFlat_tnyog")

[connection signal="pressed" from="VBoxContainer/MarginContainer/StartButton" to="." method="_on_start_button_pressed"]
[connection signal="pressed" from="VBoxContainer/MarginContainer/Close" to="." method="_on_close_pressed"]
